[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["Nathan Bird <nathanbirdka@gmail.com>"]
description = "Sample project using wasm-pack in rust"
license = "MIT"
repository = "https://github.com/nbird11/hello-wasm"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.34"
